# catnap

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  build.rs  lefthook.yml
.github/: quality-gates.json
.github/scripts/: check_live_quality_gates.py  check_quality_gates_contract.py  ci-path-gate.sh  compute-version.sh  label-gate.sh  metadata_gate.py  prepare-docker-binaries.sh  publish_github_release.py  release-intent.sh  release_plan.py  release_snapshot.py  resolve_release_tag.py  smoke-compose.sh  smoke-test-image.sh  smoke-test.sh  test-inline-metadata-workflows.sh  test-live-quality-gates.sh  test-prepare-docker-binaries.sh  test-quality-gates-contract.sh  test-release-intent.sh  test-release-plan.py  test-release-snapshot.sh  test-resolve-release-tag.sh
.github/workflows/: ci-main.yml  ci-pr.yml  ci.yml  label-gate.yml  notify-release-failure.yml  release-backfill.yml  release.yml  review-policy.yml
deploy/: .env.example  Caddyfile  README.md  compose.yaml
docs/plan/: README.md
docs/specs/: README.md
docs/ui/: README.md
scripts/: dev-bg-down.sh  dev-bg-up.sh
scripts/dev/: start-backend.sh  start-storybook.sh  stop-backend.sh  stop-storybook.sh
src/: app.rs  app_api.rs  catalog_refresh.rs  config.rs  db.rs  defaults.rs  lazycat.rs  lib.rs  main.rs  models.rs  notification_content.rs  notifications.rs  ops.rs  poller.rs  update_check.rs  updates.rs  upstream.rs
tests/: api.rs  catalog_refresh.rs  db.rs  ops.rs  poller.rs
web/: README.md  biome.json  index.html  package.json  vite.config.ts  vitest.config.ts
(+205 files in other folders)
